# pro-editor-pocket

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sd.md  sdkconfig.defaults
.ti-config/: array.json  bot.json  m5.json  m5gfx.json  object.json  sandbox.json  sdcard.json  tft.json
components/picoruby-sdcard/: CMakeLists.txt  mrbgem.rake
components/picoruby-sdcard/include/: sdcard.h
components/picoruby-sdcard/mrblib/: sdcard.rb
components/picoruby-sdcard/ports/esp32/: sdcard_driver.c  sdcard_driver.h  sdcard_native.c
components/picoruby-sdcard/src/mrubyc/: sdcard.c
components/picoruby-tft/: CMakeLists.txt  mrbgem.rake
components/picoruby-tft/ports/esp32/: st7789_spi.c  st7789_spi.h  tft_native.c
components/picoruby-tft/src/mruby/: tft.c
components/picoruby-tft/src/mrubyc/: tft.cpp
components/tft/: mrbgem.rake
components/tft/ports/esp32/: st7789_spi.c  st7789_spi.h  tft_native.c
components/tft/src/mrubyc/: tft.cpp
main/: CMakeLists.txt  main.c
main/mrblib/: app.rb
