idf_component_register(
    SRCS
        "ports/esp32/st7789_spi.c"
        "ports/esp32/tft_native.c"
    INCLUDE_DIRS
        "include"
        "ports/esp32"
        "../picoruby-esp32/picoruby/include"
        "../picoruby-esp32/picoruby/mrbgems/picoruby-mrubyc/lib/mrubyc/src"
        "../picoruby-esp32/picoruby/mrbgems/picoruby-machine/include"
    PRIV_REQUIRES
        driver
        picoruby-esp32
)

add_definitions(
    -DPICORB_VM_MRUBYC
    -DESP32_PLATFORM
)
